src/yaml/gangway/gwy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gangway
  namespace: auth
spec:
  type: NodePort
  ports:
  - name: gangway
    port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 30080
  selector:
    name: gangway
